...

  function renderItem({ item }: ListRenderItemInfo<MovieProps>) {
    return <MovieItem movie={item} width={150} height={150} />;
  }

  return (
    <Screen canGoBack isLoading={isLoading} title="Movie Details" scrollable testID='details-screen'>
      <Box
        overflow="hidden"
        borderRadius="s8"
        height={420}
        flex={1}
        backgroundColor="gray">
...
          <TitleBar title="Similares" />
          <RenderIfElse
            condition={isLoadingSimilars}
            renderIf={<ActivityIndicator size="large" />}
            renderElse={
              <FlatList
                testID='similar-movies-list'
                data={similars?.data}
                renderItem={renderItem}
                horizontal
                contentContainerStyle={{ gap: 16 }}
                showsHorizontalScrollIndicator={false}
              />
...
