...
        ]}
      />
    );
  }

  return (
    <Screen testID='home-screen'>
      <Box
        flexDirection="row"
        alignItems="center"
        justifyContent="space-between"
        mb="s16">
        <Text preset="headingMedium">BRQ Movies</Text>
...
